# opti-z-oignons

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  package-lock.json  package.json  pixi.toml  tailwind.config.js
.github/workflows/: deploy.yml  static.yml  test-deploy.yml  test.yml
assets/: main.tw.css
src/: logic.rs  main.rs  name_generator.rs
src/app/: layout.rs  mod.rs  not_found.rs  ui.rs
src/app/problem/: page.rs
src/app/solution/: page.rs
src/logic/: examples.rs  mod.rs  model.rs  solver.rs
