[package]
name = "group-assignment"
version = "0.0.1"
authors = ["AntoinePrv <AntoinePrv@users.noreply.github.com>"]
edition = "2024"

[dependencies]
const_format = { version = "0.2.34", features = ["rust_1_83"] }
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
petgraph = { version = "0.7.1", features = [] }
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
